--- a/files/index.html
+++ b/files/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page For TP5_DevOps</title>
-</head>
-<body>
-    <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <h1>Hi and welcome to my TP5_DevOps Page V2</h1>
-        <img src="./jenkins.png" alt="jenkins logo">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome Page For tp5-docker-devops</title>
+  </head>
+  <body>
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      "
+    >
+      <h1>Hi and welcome to my tp5-docker-devops Page V2</h1>
+      <img src="./jenkins.png" alt="jenkins logo" />
     </div>
-</body>
+  </body>
 </html>
